freesia/manifests/outline/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: outline
  labels:
    app.kubernetes.io/name: outline
    app.kubernetes.io/instance: outline
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: outline
    app.kubernetes.io/instance: outline
